Add rust snippets for Neovim

--- a/nvim/.config/nvim/mysnippets/package.json
+++ b/nvim/.config/nvim/mysnippets/package.json
@@ -9,6 +9,10 @@
             {
                 "language": "python",
                 "path": "./python.json"
+            },
+            {
+                "language": "rust",
+                "path": "./rust.json"
             }
         ]
     }
